# agat-emulator

./: .gitignore  CHANGES  CHANGES_ru  CMakeLists.txt  README.md  Upload.bat  release-1.10.txt  release-1.11.txt  release-1.12.1.txt  release-1.12.txt  release-1.13.1.txt  release-1.13.txt  release-1.14.txt  release-1.15.txt  release-1.16.txt  release-1.17-ru.txt  release-1.17.txt  release-1.18-ru.txt  release-1.18.1-ru.txt  release-1.18.1.txt  release-1.18.txt  release-1.19-ru.txt  release-1.19.1-ru.txt  release-1.19.1.txt  release-1.19.2-ru.txt  release-1.19.2.txt  release-1.19.3-ru.txt  release-1.19.3.txt  release-1.19.txt  release-1.20-ru.txt  release-1.20.1-ru.txt  release-1.20.1.txt  release-1.20.2-ru.txt  release-1.20.2.txt  release-1.20.txt  release-1.21-ru.txt  release-1.21.txt  release-1.22-ru.txt  release-1.22.txt  release-1.23-ru.txt  (+30 more)
help/: CMakeLists.txt  beeper_ru.html  chsystem_ru.html  context_ru.html  controlling_en.html  cpu_ru.html  debug_ru.html  devinfo_ru.html  english.hhc  english.hhp  features_en.html  features_ru.html  gconf_ru.html  hardware_en.html  hardware_ru.html  host_req_en.html  host_req_ru.html  index_en.html  index_ru.html  keys_en.html  keys_ru.html  layout_ru.html  main_menu_en.html  mainwnd_ru.html  make.bat  memconf_ru.html  mockingboard_ru.html  monitor_ru.html  newsystem_ru.html  nippel_ru.html  paddles_ru.html  printer_ru.html  russian.hhc  russian.hhp  scsi_ru.html  shugart_ru.html  softcard_ru.html  tape_ru.html  teac_ru.html  thunder_ru.html  (+3 more)
release/fnts/: AGATHE7.FNT  AGATHE7_FOR9.FNT  AGATHE9.FNT  AGATHE9_FOR7.FNT  APPLE2.FNT  acorn.fnt  agathe7-svt.fnt  apple.fnt  apple1.fnt  apple2e.fnt  apple2ee.fnt  applesm.fnt  pravetz8a8c_bg.fnt  pravetz8a8c_su.fnt  pravetz8a8c_uz.fnt
release/palette/: 16colorshigh.pal  16colorslow.pal  apple2.pal  bw-monitor-16.pal  default.pal  grayscale16.pal  grayscale8.pal  rgb-monitor-16.pal
setup/: make.bat  readme.txt  setup-1.10.iss  setup-1.11.iss  setup-1.12.1.iss  setup-1.12.iss  setup-1.13.1.iss  setup-1.13.iss  setup-1.14.iss  setup-1.15.iss  setup-1.16.iss  setup-1.17.iss  setup-1.18.1.iss  setup-1.18.iss  setup-1.19.1.iss  setup-1.19.2.iss  setup-1.19.3.iss  setup-1.19.iss  setup-1.2.iss  setup-1.20.1.iss  setup-1.20.2.iss  setup-1.20.iss  setup-1.21.iss  setup-1.22.iss  setup-1.23.iss  setup-1.24.iss  setup-1.25.1.iss  setup-1.25.iss  setup-1.26.1.iss  setup-1.26.iss  setup-1.27.iss  setup-1.3.1.iss  setup-1.3.2.iss  setup-1.3.iss  setup-1.4.iss  setup-1.5.iss  setup-1.6.1.iss  setup-1.6.iss  setup-1.7.iss  setup-1.8.iss  (+3 more)
src/: CMakeLists.txt  aatom.c  aboutdlg.c  apple1.c  apple2.c  apple2e.c  baseram.c  baserom.c  cfgdlg.c  cleanup.bat  common.h  config.bat  cpudlg.c  debug.c  debug.h  devseldlg.c  dialog.c  dialog.h  firmware.c  keyb.c  keyb.h  list.c  list.h  localize.c  localize.h  logo.c  logo.h  main.c  maindlg.c  make.bat  makeall.bat  manifest  memdlg.c  memory.c  memory.h  msgloop.c  msgloop.h  prndlg.c  psrom7.c  release.bat  (+36 more)
src/bmps/: agat.ai  diskette.ai
src/cfgedit/: CMakeLists.txt  bitmaps.c  cfgedit.c  make.bat  params.c  params.h
src/clock/: CMakeLists.txt  make.bat  nippelclock.c  noslotclock.c  thunderclock.c
src/cpu/: CMakeLists.txt  Codes.h  M6502.c  M6502.h  Tables.h  cpu.c  cpu6502.c  cpu65C02.c  cpuint.h  make.bat
src/debug/: console.c  console.h  debugint.h  debugwnd.c  debugwnd.h
src/dialogs/: aboutdlg.c  cfgdlg.c  devseldlg.c  dialog.c  dialog.h  fddaadlg.c  firmwdlg.c  gconfig.c  joydlg.c  maindlg.c  memdlg.c  mondlg.c  prndlg.c  prnprogressdlg.c  prnprogressdlg.h  resize.c  resize.h  roma1dlg.c  scsidlg.c  snddlg.c  syschoosedlg.c  tapedlg.c  ttya1dlg.c
src/fdd/: CMakeLists.txt  fdd.c  fdd1.c  fdd1extr.c  fddaa.c  fddliberty.c  genimage.c  make.bat
src/installio/: CMakeLists.txt  installio.c  make.bat
src/joystick/: CMakeLists.txt  joystick.c  make.bat
src/lang/: CMakeLists.txt  english.rc  english.rh  make.bat  russian.rc  russian.rh
src/langsel/: CMakeLists.txt  langsel.c  langsel.rc  make.bat  manifest  resource.h
src/logging/: CMakeLists.txt  logging.c  logging.h
src/mouse/: CMakeLists.txt  applemouse.c  make.bat  mc6821.c  mc6821.h  mouse9.c  nippelmouse.c
src/newgfx/: CMakeLists.txt  ng_logging.c  ng_logging.h  ng_window.c  ng_window.h
src/printer/: CMakeLists.txt  epson_emu.c  epson_emu.h  export.h  export_raw.c  export_text.c  export_text.h  export_tiff.c  lpt_printer.c  lpt_printer.h  make.bat  printer9.c  printer_cable.c  printer_cable.h  printer_device.c  printer_device.h  printer_emu.c  printer_emu.h  printera.c  printeraa.c  prnprogressdlg_interop.c  prnprogressdlg_interop.h  raw_file_printer.c  raw_file_printer.h  tiffwrite.c  tiffwrite.h
src/ramcard/: CMakeLists.txt  a2ramcard.c  make.bat  saturnmem.c
src/scsi/: CMakeLists.txt  cms.c  make.bat
src/softcard/: CMakeLists.txt  make.bat  opcodes_base.c  z80.c  z80_cb.c  z80_ddfd.c  z80_ddfdcb.c  z80_ed.c
src/sound/: CMakeLists.txt  directsound_guids.c  make.bat  mockingboard.c  sound.c  sound_acm.c  sound_beep.c  sound_ds.c  sound_none.c  soundint.h
src/tape/: CMakeLists.txt  avifile.c  avifile.h  make.bat  tape.c  tapeint.h
src/video/: CMakeLists.txt  chargen.c  make.bat  video_apple_tv.c  video_apple_tv.h  video_gfx.c  video_renderer.c  video_renderer.h  video_text.c  videoflash.c  videoinit.c  videoint.h  videoinvalidate.c  videomono.c  videopages.c  videopaint.c  videopal.c  videoprocs.c  videosel.c  videosel7.c  videosel9.c  videosela.c  videoselaa.c  videosetmode.c  videoterm.c
(+97 files in other folders)
